--- a/.travis.yml
+++ b/.travis.yml
@@ -20,45 +20,16 @@ install:
   - sudo chmod +x runAMinerDemo.sh
   - sudo chmod +x runAMinerIntegrationTest.sh
   - sudo chmod +x runCoverageTests.sh
-
-script:
-  - sudo pip3 install psutil
-  - sudo python3 -c """import psutil; print(psutil.net_connections())"""
+  # fix up exim4
   - sudo sed -i "s/dc_local_interfaces='127.0.0.1 ; ::1'/dc_local_interfaces='127.0.0.1 ; '/g" /etc/exim4/update-exim4.conf.conf
-  - sudo cat /etc/mailname
-  - sudo cat /etc/exim4/update-exim4.conf.conf
   - sudo service exim4 stop
-  - sudo service exim4 status -l
   - sudo pkill exim4
-  - sudo service exim4 status -l
   - sudo update-exim4.conf
-  - sudo rm /var/log/exim4/mainlog
   - sudo service exim4 start
-  - sudo service exim4 status -l
-  - sudo lsof -i:25
-  - sudo cat /var/log/exim4/mainlog
   - sudo touch /var/mail/mail
   - sudo chown mail:mail /var/mail/mail
-  - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP('127.0.0.1', timeout=None); print(smtp_obj); smtp_obj.quit()"""
-  - sudo python3 -c """import psutil; print(psutil.net_connections())"""
-  - sudo service exim4 status -l
-  - sudo lsof -i:25
-  - sudo cat /var/log/exim4/mainlog
-  - python3 -c """import socket; a_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM); location = ('127.0.0.1', 25); result_of_check = a_socket.connect_ex(location); print(result_of_check); a_socket.close()"""
-  - python3 -c """import socket; a_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM); location = ('127.0.0.1', 25); result_of_check = a_socket.connect(location); print(result_of_check); a_socket.close()"""
-  - sudo python3 -c """import socket; print(socket.getfqdn()); print(socket.gethostbyname(socket.gethostname())); import smtplib; soc = smtplib.SMTP('localhost', timeout=5); soc.debuglevel = 3; print('local_hostname', soc.local_hostname); s = soc._get_socket('127.0.0.1', 25, None); print('first socket ', s); s.close(); print('getaddrinfo', socket.getaddrinfo('127.0.0.1', 25, 0, 1)); print('create_connection'); create_soc = socket.create_connection(('127.0.0.1', 25), None); print('create_connection_soc', create_soc); create_soc.close(); soc.quit()"""
-  - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP('localhost', timeout=None); print(smtp_obj); smtp_obj.quit()"""
-  - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP('localhost', timeout=None); print(smtp_obj); smtp_obj.quit()"""
-  - python3 -c """import smtplib; smtp_obj = smtplib.SMTP('localhost', timeout=None); print(smtp_obj); smtp_obj.quit()"""
-  - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP('127.0.0.1', port=25, local_hostname='localhost', timeout=None); print(smtp_obj); smtp_obj.quit()"""
-  - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP('127.0.0.1', port=25, timeout=None); print(smtp_obj); smtp_obj.quit()"""
-  - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP(timeout=None); smtp_obj.connect(); print(smtp_obj); smtp_obj.quit()"""
-  - sudo iptables -vL
-  - sudo ls -la /var/mail
-  - echo d | sudo mail -u mail
-  - sudo python3 -m unittest unit/events/DefaultMailNotificationEventHandlerTest.py
-  - sudo ls -la /var/mail
-  - echo p | sudo mail -u mail
+
+script:
   - ./runUnittests.sh
   - ./runAMinerDemo.sh demo/AMiner/demo-config.py
   - ./runAMinerDemo.sh demo/AMiner/jsonConverterHandler-demo-config.py
