changed the order of ETD so no error occurs when the order in the config is wrong.

--- a/aecid-testsuite/unit/data/configfiles/template_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/template_config.yml
@@ -41,6 +41,8 @@ Analysis:
           paths: ["/model/accesslog/request","/model/accesslog/status"]
           learn_mode: True
 
+        - type: EventTypeDetector
+
 EventHandlers:
         - id: stpe
           json: True # optional default: False
