added the stream parameter to the StreamPrinterEventHandler.

--- a/aecid-testsuite/unit/data/configfiles/template_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/template_config.yml
@@ -45,8 +45,8 @@ Analysis:
 
 EventHandlers:
         - id: stpe
-          json: True # optional default: False
           type: StreamPrinterEventHandler
+          output_file_path: '/tmp/streamPrinter.txt'
 
         - id: syslog
           type: SyslogWriterEventHandler
