fixed error in unittest.

--- a/aecid-testsuite/unit/data/configfiles/template_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/template_config.yml
@@ -44,6 +44,7 @@ Analysis:
           learn_mode: True
 
         - type: EventTypeDetector
+          learn_mode: False
 
 EventHandlers:
         - id: stpe
