--- a/aecid-testsuite/unit/data/configfiles/template_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/template_config.yml
@@ -27,12 +27,14 @@ Input:
 
 Analysis:
         - type: NewMatchPathValueDetector
+          id: NewMatchPathValueDetector
           paths: ["/model/accesslog/status"]
           persistence_id: 'accesslog_status' # optional default: Default
           output_logline: False # optional default: True
           learn_mode: True
 
         - type: NewMatchPathValueComboDetector
+          id: NewMatchPathValueComboDetector1
           paths: ["/model/accesslog/request","/model/accesslog/method"]
           learn_mode: True
           persistence_id: 'accesslog_request' # optional default: Default
@@ -40,11 +42,15 @@ Analysis:
           allow_missing_values: False # optional default: False
 
         - type: NewMatchPathValueComboDetector
+          id: NewMatchPathValueComboDetector2
           paths: ["/model/accesslog/request","/model/accesslog/status"]
           learn_mode: True
 
         - type: EventTypeDetector
+          id: EventTypeDetector
           learn_mode: False
+          output_event_handlers:
+            - stpe
 
 EventHandlers:
         - id: stpe
