fixed typo in Dockerfile.

--- a/aecid-testsuite/Dockerfile
+++ b/aecid-testsuite/Dockerfile
@@ -42,8 +42,8 @@ RUN apt-get update && apt-get install -y \
         python3-kafka \
         python3-cerberus \
         python3-yaml \
-        libacl1-dev \
         python3-pylibacl \
+        libacl1-dev \
         postfix \
         procps \ 
         mailutils \
@@ -86,7 +86,7 @@ RUN ln -s /usr/lib/logdata-anomaly-miner/aminerremotecontrol.py /usr/bin/aminerr
 	&& ln -s /usr/lib/python3/dist-packages/yaml /usr/lib/logdata-anomaly-miner/yaml \
 	&& ln -s /usr/lib/python3/dist-packages/pytz /usr/lib/logdata-anomaly-miner/pytz \
 	&& ln -s /usr/lib/python3/dist-packages/dateutil /usr/lib/logdata-anomaly-miner/dateutil \
-        && find /usr/lib/python3/dist-packages -name posix1e.cpython\*.so -exec ln -s {} /usr/lib/logdata-anomaly-miner/posix1e.cpython-x86_64-linux-gnu.so \; \
+        && find /usr/lib/python3/dist-packages -name posix1e.cpython*.so -exec ln -s {} /usr/lib/logdata-anomaly-miner/posix1e.cpython-x86_64-linux-gnu.so \; \
 	&& ln -s /usr/lib/python3/dist-packages/six.py /usr/lib/logdata-anomaly-miner/six.py \
 	&& useradd -ms /usr/sbin/nologin aminer && mkdir /var/lib/aminer && mkdir /etc/aminer \
         && chmod 0755 /aminerwrapper.sh
