--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Standards-Version: 4.5.1
 Homepage: https://aecid.ait.ac.at/
 Vcs-Git: https://github.com/ait-aecid/logdata-anomaly-miner.git
 Vcs-Browser: https://github.com/ait-aecid/logdata-anomaly-miner
+Rules-Requires-Root: no
 
 Package: logdata-anomaly-miner
 Architecture: all
