--- a/debian/rules
+++ b/debian/rules
@@ -16,6 +16,12 @@ execute_before_dh_auto_build:
 	http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl \
 	debian/aminer.1.xml debian/aminerremotecontrol.1.xml
 
+execute_after_dh_install:
+	chmod a-x \
+		debian/logdata-anomaly-miner/usr/lib/logdata-anomaly-miner/aminer/analysis/NewMatchPathValueComboDetector.py \
+		debian/logdata-anomaly-miner/usr/lib/logdata-anomaly-miner/aminer/analysis/NewMatchPathValueDetector.py \
+		debian/logdata-anomaly-miner/usr/lib/logdata-anomaly-miner/aminer/analysis/__init__.py
+
 # Modify startup behaviour in auto-generated code in postinst:
 # Do not attempt to add aminer.service to autostart if user does
 # not want to have it running explicitely. See "Running as a Service"
