Fixed warnigs due to files in Persistency-Directory
* fixed acl-problems in dockerfile and autocreate /var/lib/aminer/log
* added simple test for dockercontainer
* negate result of the timeout-command. 1 is okay. 0 must be an error
* added bullseye-tests
* make tmp-dir in debian-bullseye-test and debian-buster-test unique
* fixed various deepsource-issues

--- a/source/root/etc/aminer/template_config.yml
+++ b/source/root/etc/aminer/template_config.yml
@@ -14,7 +14,10 @@ LogResourceList:
 # to the 'AMinerUser' but not group/world readable. On violation,
 # AMiner will refuse to start. When undefined, '/var/lib/aminer'
 # is used.
-# Core.PersistenceDir: '/tmp/lib/aminer'
+# Core.PersistenceDir: '/var/lib/aminer'
+
+# Directory for logfiles. Default: /var/lib/aminer/log
+# Core.LogDir: '/var/lib/aminer/log'
 
 # Define a target e-mail address to send alerts to. When undefined,
 # no e-mail notification hooks are added.
