added KafkaEventHandler to template_config.yml

--- a/aecid-testsuite/unit/data/configfiles/template_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/template_config.yml
@@ -59,3 +59,7 @@ EventHandlers:
 
         - id: syslog
           type: SyslogWriterEventHandler
+
+        - id: kafka
+          type: KafkaEventHandler
+          topic: test_topic
