added KafkaEventHandler to template_config.py and template_config.yml.

--- a/source/root/etc/aminer/template_config.yml
+++ b/source/root/etc/aminer/template_config.yml
@@ -142,3 +142,7 @@ EventHandlers:
 
         - id: "syslog"
           type: "SyslogWriterEventHandler"
+
+        - id: "kafka"
+          type: "KafkaEventHandler"
+          topic: "test_topic"
