--- a/source/root/etc/aminer/template_config.yml
+++ b/source/root/etc/aminer/template_config.yml
@@ -145,4 +145,5 @@ EventHandlers:
 
         - id: "kafka"
           type: "KafkaEventHandler"
+          json: true
           topic: "test_topic"
