added KafkaEventHandler to suppress_config.yml.

--- a/aecid-testsuite/unit/data/configfiles/suppress_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/suppress_config.yml
@@ -41,3 +41,8 @@ Analysis:
 EventHandlers:
         - id: stpe
           type: StreamPrinterEventHandler
+
+        - id: kafka
+          type: KafkaEventHandler
+          json: True
+          topic: test_topic
