--- a/aecid-testsuite/unit/config/kafka-client.conf
+++ b/aecid-testsuite/unit/config/kafka-client.conf
@@ -1,5 +1,2 @@
 [DEFAULT]
-bootstrap.servers = 'localhost:9092'
-enable.auto.commit = true
-group.id = 'test_group'
-auto.offset = 'earliest'
+bootstrap_servers = localhost:9092
