changed kafka topic for yaml tests.

--- a/aecid-testsuite/unit/data/configfiles/suppress_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/suppress_config.yml
@@ -45,4 +45,4 @@ EventHandlers:
         - id: kafka
           type: KafkaEventHandler
           json: True
-          topic: test_topic
+          topic: yaml_test_topic
