--- a/aecid-testsuite/unit/data/configfiles/template_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/template_config.yml
@@ -48,6 +48,8 @@ Analysis:
 
         - type: EventTypeDetector
           id: EventTypeDetector
+          min_num_vals: 100
+          max_num_vals: 200
           learn_mode: False
           output_event_handlers:
             - stpe
