--- a/aecid-testsuite/demo/aminer/demo-config.yml
+++ b/aecid-testsuite/demo/aminer/demo-config.yml
@@ -874,6 +874,9 @@ Analysis:
           check_rules_flag: True
           hypothesis_max_delta_time: 1.0
           learn_mode: True
+        - type: EventFrequencyDetector
+          id: EventFrequencyDetector
+          window_size: 0.5
         - type: MatchFilter
           id: MatchFilter
           paths:
