--- a/aecid-testsuite/demo/aminer/demo-config.yml
+++ b/aecid-testsuite/demo/aminer/demo-config.yml
@@ -877,6 +877,20 @@ Analysis:
         - type: EventFrequencyDetector
           id: EventFrequencyDetector
           window_size: 0.5
+        - type: EventSequenceDetector
+          id: EventSequenceDetector
+          id_path_list:
+            - '/model/ParsingME'
+          ignore_list:
+            - '/model/ECD/a'
+            - '/model/ECD/b'
+            - '/model/ECD/c'
+            - '/model/ECD/d'
+            - '/model/ECD/e'
+            - '/model/ECD/f'
+            - '/model/Random'
+            - '/model/RandomTime'
+            - '/model/DailyCron'
         - type: MatchFilter
           id: MatchFilter
           paths:
