--- a/aecid-testsuite/demo/aminer/demo-config.yml
+++ b/aecid-testsuite/demo/aminer/demo-config.yml
@@ -874,6 +874,23 @@ Analysis:
           check_rules_flag: True
           hypothesis_max_delta_time: 1.0
           learn_mode: True
+        - type: EventFrequencyDetector
+          id: EventFrequencyDetector
+          window_size: 0.5
+        - type: EventSequenceDetector
+          id: EventSequenceDetector
+          id_path_list:
+            - '/model/ParsingME'
+          ignore_list:
+            - '/model/ECD/a'
+            - '/model/ECD/b'
+            - '/model/ECD/c'
+            - '/model/ECD/d'
+            - '/model/ECD/e'
+            - '/model/ECD/f'
+            - '/model/Random'
+            - '/model/RandomTime'
+            - '/model/DailyCron'
         - type: MatchFilter
           id: MatchFilter
           paths:
