added consume_delimiter to yaml.

--- a/aecid-testsuite/demo/aminerElasticsearchDemo/elasticsearch-demo-config.yml
+++ b/aecid-testsuite/demo/aminerElasticsearchDemo/elasticsearch-demo-config.yml
@@ -42,7 +42,7 @@ Parser:
        - id: data
          type: DelimitedDataModelElement
          name: 'Data'
-         args: '%'
+         delimiter: '%'
 
        - id: rest
          type: AnyByteDataModelElement
