fixed Deepsource issues.

--- a/aecid-testsuite/demo/aminer/demo-config.yml
+++ b/aecid-testsuite/demo/aminer/demo-config.yml
@@ -600,7 +600,7 @@ Parser:
 
        - id: fixed
          type: FixedDataModelElement
-         name: ''
+         name: 'fixed'
          args: ' '
 
        - id: se3
