created first config for elastic.log and fixed more errors.

--- a/aecid-testsuite/demo/aminerJsonInputDemo/json-elastic-demo.yml
+++ b/aecid-testsuite/demo/aminerJsonInputDemo/json-elastic-demo.yml
@@ -78,7 +78,7 @@ Parser:
 
        - id: persistence_name
          type: FixedWordlistDataModelElement
-         name: 'persistence_name'
+         name: persistence_name
          args:
            - 'Default'
            - 'suricata_fileinfo'
