038 yaml duplicate ids (#519)
* added DetectionTimestamp to json output.

* fixed unittests.

* fixed unittests.

* fixed KafkaEventHandlerTest.

* fixed testingwrapper.

* fixed runAminerElasticsearchDemo.sh

* undid changes in testingwrapper.

* resolved conflicts

* fixed kafka tests.

* added checks in YamlConfig if id was used multiple times for Analysis, Parser and EventHandlers.

* fixed Deepsource issues.

Co-authored-by: Ernst Leierzopf <ernst.leierzopf.fl@ait.ac.at>

--- a/aecid-testsuite/demo/aminer/demo-config.yml
+++ b/aecid-testsuite/demo/aminer/demo-config.yml
@@ -470,7 +470,7 @@ Parser:
          name: 'DelimitedDataModelElement'
          delimiter: ';'
 
-       - id: fixedDataModelElement
+       - id: fixedDataModelElement1
          type: FixedDataModelElement
          name: 'FixedDataModelElement'
          args: ';'
@@ -480,7 +480,7 @@ Parser:
          name: 'se'
          args:
            - delimitedDataModelElement
-           - fixedDataModelElement
+           - fixedDataModelElement1
 
        - id: fixed1
          type: FixedDataModelElement
@@ -541,7 +541,7 @@ Parser:
          type: HexStringModelElement
          name: 'HexStringModelElement'
 
-       - id: fixedDataModelElement
+       - id: fixedDataModelElement2
          type: FixedDataModelElement
          name: 'FixedDataModelElement'
          args: 'Gateway IP-Address: '
@@ -554,7 +554,7 @@ Parser:
          type: SequenceModelElement
          name: 'se2'
          args:
-           - fixedDataModelElement
+           - fixedDataModelElement2
            - ipAddressDataModelElement
 
        - id: multiLocaleDateTimeModelElement
