added suppress_unparsed config.

--- a/aecid-testsuite/unit/data/configfiles/suppress_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/suppress_config.yml
@@ -28,6 +28,7 @@ Input:
         verbose: True # optional
         multi_source: False # optional
         timestamp_paths: "/model/accesslog/time"
+        suppress_unparsed: True
 
 Analysis:
         - type: NewMatchPathValueComboDetector
