--- a/aecid-testsuite/demo/aminerJsonInputDemo/json-aminer-demo.yml
+++ b/aecid-testsuite/demo/aminerJsonInputDemo/json-aminer-demo.yml
@@ -98,12 +98,12 @@ Parser:
        - id: timestamps_no_milliseconds
          type: DateTimeModelElement
          name: 'timestamps'
-         args: '%s'
+         date_format: '%s'
 
        - id: timestamps_with_milliseconds
          type: DateTimeModelElement
          name: 'timestamps'
-         args: '%s.%f'
+         date_format: '%s.%f'
 
        - id: timestamps
          type: FirstMatchModelElement
