--- a/aecid-testsuite/unit/data/configfiles/unknown_analysis_component.yml
+++ b/aecid-testsuite/unit/data/configfiles/unknown_analysis_component.yml
@@ -10,7 +10,7 @@ Parser:
          - id: 'timeModel'
            type: DateTimeModelElement
            name: 'time'
-           args: '%Y-%m-%dT%H:%M:%S.%f'
+           date_format: '%Y-%m-%dT%H:%M:%S.%f'
 
          - id: 'hostModel'
            type: VariableByteDataModelElement
