--- a/aecid-testsuite/demo/aminerJsonInputDemo/json-elastic-demo.yml
+++ b/aecid-testsuite/demo/aminerJsonInputDemo/json-elastic-demo.yml
@@ -81,7 +81,7 @@ Parser:
        - id: _index
          type: DateTimeModelElement
          name: '_index'
-         args: 'aminer-statusinfo-%Y.%m.%d'
+         date_format: 'aminer-statusinfo-%Y.%m.%d'
 
        - id: _type
          type: FixedDataModelElement
@@ -132,7 +132,7 @@ Parser:
        - id: timestamp
          type: DateTimeModelElement
          name: 'timestamp'
-         args: '%Y-%m-%dT%H:%M:%S.%fZ'
+         date_format: '%Y-%m-%dT%H:%M:%S.%fZ'
 
        - id: ToTime
          type: DecimalFloatValueModelElement
@@ -141,12 +141,12 @@ Parser:
        - id: fromtimestamp
          type: DateTimeModelElement
          name: 'fromtimestamp'
-         args: '%Y-%m-%dT%H:%M:%S.%fZ'
+         date_format: '%Y-%m-%dT%H:%M:%S.%fZ'
 
        - id: totimestamp
          type: DateTimeModelElement
          name: 'totimestamp'
-         args: '%Y-%m-%dT%H:%M:%S.%fZ'
+         date_format: '%Y-%m-%dT%H:%M:%S.%fZ'
 
        - id: version
          type: FixedDataModelElement
