--- a/aecid-testsuite/demo/aminer/demo-config.yml
+++ b/aecid-testsuite/demo/aminer/demo-config.yml
@@ -880,6 +880,7 @@ Analysis:
         - type: EventFrequencyDetector
           id: EventFrequencyDetector
           window_size: 0.5
+          learn_mode: True
         - type: EventSequenceDetector
           id: EventSequenceDetector
           id_path_list:
@@ -894,6 +895,7 @@ Analysis:
             - '/model/Random'
             - '/model/RandomTime'
             - '/model/DailyCron'
+          learn_mode: True
         - type: MatchFilter
           id: MatchFilter
           paths:
@@ -934,7 +936,7 @@ Analysis:
           report_interval: 10
         - type: MatchValueAverageChangeDetector
           id: MatchValueAverageChange
-          timestamp_path: None
+          timestamp_path: null
           paths:
             - "/model/Random"
           min_bin_elements: 100
