fixed json-wazuh-demo.yml config.

--- a/aecid-testsuite/demo/aminerJsonInputDemo/json-wazuh-demo.yml
+++ b/aecid-testsuite/demo/aminerJsonInputDemo/json-wazuh-demo.yml
@@ -53,6 +53,7 @@ Parser:
        - id: id
          type: DecimalIntegerValueModelElement
          name: 'id'
+         value_pad_type: 'zero'
 
        - id: firedtimes
          type: DecimalIntegerValueModelElement
