--- a/aecid-testsuite/unit/data/configfiles/same_id_event_handlers.yml
+++ b/aecid-testsuite/unit/data/configfiles/same_id_event_handlers.yml
@@ -11,7 +11,8 @@ Parser:
           start: True
           type: SequenceModelElement
           name: 'model'
-          args: apacheModel
+          args:
+            - apacheModel
 
 Input:
         verbose: True # optional
