--- a/aecid-testsuite/unit/data/configfiles/same_id_parser.yml
+++ b/aecid-testsuite/unit/data/configfiles/same_id_parser.yml
@@ -16,7 +16,8 @@ Parser:
           start: True
           type: SequenceModelElement
           name: 'model'
-          args: apacheModel
+          args:
+            - apacheModel
 
 Input:
         verbose: True # optional
