fixed error in config.

--- a/source/root/etc/aminer/template_config.yml
+++ b/source/root/etc/aminer/template_config.yml
@@ -109,7 +109,8 @@ Parser:
           start: True
           type: SequenceModelElement
           name: 'model'
-          args: apacheModel
+          args: 
+            - apacheModel
 
 Input:
         verbose: True # optional
