fixed error where EMPTY_LIST and EMPTY_OBJECT could not be parsed from the yaml config.

--- a/aecid-testsuite/demo/aminerJsonInputDemo/windows.yml
+++ b/aecid-testsuite/demo/aminerJsonInputDemo/windows.yml
@@ -148,6 +148,8 @@ Parser:
            UserName: username
            Site: site
            Container: container
+           _empty_list: EMPTY_LIST
+           _empty_object: EMPTY_OBJECT
 
 
 
